Petite correction Texte

--- a/html/biomasse.html
+++ b/html/biomasse.html
@@ -99,7 +99,7 @@
       <section>
         <h2>Activité interactive</h2>
         <p>
-          Tu peux maintenant tester tes connaissances en lançant le <a href="quiz.html">quiz sur la biomasse</a>.
+          Tu peux maintenant tester tes connaissances en lançant le <a href="quiz.html">quiz</a>.
         </p>
       </section>
     </div>
