--- a/html/hydraulique.html
+++ b/html/hydraulique.html
@@ -103,7 +103,7 @@
       <section>
         <h2>Activité interactive</h2>
         <p>
-          Tu peux maintenant tester tes connaissances en lançant le <a href="quiz.html">quiz sur l'énergie hydraulique</a>.
+          Tu peux maintenant tester tes connaissances en lançant le <a href="quiz.html">quiz</a>.
         </p>
       </section>
     </div>
