--- a/html/solaire.html
+++ b/html/solaire.html
@@ -113,7 +113,7 @@
       <section>
         <h2>Activité interactive</h2>
         <p>
-          Tu peux maintenant tester tes connaissances en lançant le <a href="quiz.html">quiz sur l'énergie solaire</a>.
+          Tu peux maintenant tester tes connaissances en lançant le <a href="quiz.html">quiz</a>.
         </p>
       </section>
     </div>
