fixed scaling and navigation bar issue.

--- a/html/solaire.html
+++ b/html/solaire.html
@@ -32,11 +32,11 @@
 
       <div class="scene">
         <img src="../img/solar_horizontal.png" alt="Soleil" class="sun">
-        <img src="../img/nuage.png" class="cloud" style="top: 10px; left: 30px;" onclick="removeCloud(this)">
-        <img src="../img/nuage.png" class="cloud" style="top: 40px; left: 60px;" onclick="removeCloud(this)">
-        <img src="../img/nuage.png" class="cloud" style="top: 20px; left: 100px;" onclick="removeCloud(this)">
-        <img src="../img/nuage.png" class="cloud" style="top: 70px; left: 40px;" onclick="removeCloud(this)">
-        <img src="../img/nuage.png" class="cloud" style="top: 30px; left: 150px;" onclick="removeCloud(this)">
+        <img src="../img/nuage.png" class="cloud" style="top: 0%; left: 5%;" onclick="removeCloud(this)">
+        <img src="../img/nuage.png" class="cloud" style="top: 30%; left: 30%;" onclick="removeCloud(this)">
+        <img src="../img/nuage.png" class="cloud" style="top: 5%; left: 27%;" onclick="removeCloud(this)">
+        <img src="../img/nuage.png" class="cloud" style="top: 20%; left: 10%;" onclick="removeCloud(this)">
+        <img src="../img/nuage.png" class="cloud" style="top: 15%; left: 50%;" onclick="removeCloud(this)">
       </div>
     </div>
 
