--- a/html/type_energie.html
+++ b/html/type_energie.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Les différente type d'énergies renouvelables</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/type_energie_style.css">
 </head>
