--- a/html/apropos.html
+++ b/html/apropos.html
@@ -38,22 +38,24 @@
       <div class="team-cards">
         <div class="team-card">
           <div class="profile-image">
-            <!-- Placeholder for profile image -->
             <div class="profile-placeholder">LC</div>
           </div>
           <h3>Lilian Cao</h3>
           <p>Développeur et chercheur en énergies renouvelables</p>
-          <p class="contribution">Responsable du contenu et de la structure du site</p>
+          <p class="contribution">Participation au contenu, à la structure et au développement du site, en collaboration
+            complète avec l’équipe.
+
+          </p>
         </div>
 
         <div class="team-card">
           <div class="profile-image">
-            <!-- Placeholder for profile image -->
             <div class="profile-placeholder">BH</div>
           </div>
           <h3>Batur Hamzogullari</h3>
           <p>Développeur web et expert en interface utilisateur</p>
-          <p class="contribution">Responsable du design et de la programmation interactive</p>
+          <p class="contribution">Participation au design, à l’interactivité et à la programmation du site, dans une
+            démarche de travail collectif.</p>
         </div>
       </div>
     </section>
@@ -66,7 +68,8 @@
           <h3>Objectif</h3>
           <p>Ce site a été conçu dans le cadre du module TI402 (Programmation Web) pour sensibiliser à l'importance des
             énergies renouvelables dans le cadre des Objectifs de Développement Durable, notamment l'ODD 7 :
-            <em>"Énergie propre et d'un coût abordable"</em>.</p>
+            <em>"Énergie propre et d'un coût abordable"</em>.
+          </p>
         </div>
 
         <div class="info-card">
@@ -85,17 +88,19 @@
     </section>
 
     <section class="contact-section">
-  <h2>Nous contacter</h2>
-  <p>Pour toute question ou suggestion concernant ce projet, n'hésitez pas à nous contacter à l'adresse suivante :</p>
-  <a href="mailto:contact@energiesrenouvelables.edu" class="contact-button">contact@energiesrenouvelables.edu</a>
+      <h2>Nous contacter</h2>
+      <p>Pour toute question ou suggestion concernant ce projet, n'hésitez pas à nous contacter à l'adresse suivante :
+      </p>
+      <a href="mailto:contact@energiesrenouvelables.edu" class="contact-button">contact@energiesrenouvelables.edu</a>
 
-  <div class="github-link">
-    <h2>Le projet est aussi disponible sur GitHub :</h2>
-    <a href="https://github.com/Wooshayl/Projet_Web_EnrgRenouvelable" target="_blank" rel="noopener noreferrer" class="contact-button">
-      Voir le dépôt GitHub
-    </a>
-  </div>
-</section>
+      <div class="github-link">
+        <h2>Le projet est aussi disponible sur GitHub :</h2>
+        <a href="https://github.com/Wooshayl/Projet_Web_EnrgRenouvelable" target="_blank" rel="noopener noreferrer"
+          class="contact-button">
+          Voir le dépôt GitHub
+        </a>
+      </div>
+    </section>
 
   </main>
 
