--- a/html/apropos.html
+++ b/html/apropos.html
@@ -82,6 +82,7 @@
           <h3>Technologies utilisées</h3>
           <p>Ce site a été développé en utilisant HTML5, CSS3 et JavaScript, en suivant les principes de responsive
             design pour une expérience utilisateur optimale sur tous les appareils.
+            Les illustrations et visuels du site ont été générés à l’aide d’une intelligence artificielle.
           </p>
         </div>
       </div>
